# alang

./: CMakeLists.txt  README.md  todo.org
src/: main.cpp  test.cpp
src/alang/: env.hpp  parser.hpp  toks.hpp  vm.cpp  vm.hpp
src/alang/toks/: call.hpp  cte.hpp  dot_id.hpp  stack.hpp
